# irp-evidence

./: .gitignore  LICENSE  README.md  SPEC.md  openapi.yaml  pyproject.toml  requirements.txt  vercel.json
api/: _lib.py  index.py  timestamp.py  verify.py
sdk/: irp-evidence.js
tests/fixtures/: freetsa-token.meta.json  freetsa-token.tsr
verifier/: verify_package.py
